Convertir Swagger API Firma Web #925
